@@ -85,6 +85,10 @@ NTSTATUS PhSaveSettings(
     __in PWSTR FileName
     );
 
+VOID PhResetSettings(
+    VOID
+    );
+
 #define PHA_GET_STRING_SETTING(Name) ((PPH_STRING)PHA_DEREFERENCE(PhGetStringSetting(Name)))
 
 // High-level settings creation
