@@ -6,6 +6,7 @@ Process Hacker
      and security attributes
    * Added ability to change token integrity levels
    * Added Description column to service list
+   * Added option to reset all settings
    * Made grid color darker
    * Enabled multi-selection in the hidden processes window
    * Added UserNotes plugin
